--- a/PAGES/SobreMi.html
+++ b/PAGES/SobreMi.html
@@ -69,6 +69,12 @@
                         Proyectos
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link text-light"
+                    href="../PAGES/Mi Foda.html">
+                        Mi Foda
+                    </a>
+            </li>
             </ul>
         </div>
     </div>
@@ -123,6 +129,12 @@
                                     Proyectos
                                 </a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light"
+                                href="../PAGES/Mi Foda.html">
+                                    Mi Foda
+                                </a>
+                        </li>
                         </ul>
                     </div>
                 </div>
