--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
             <li class="nav-item">
               <a class="nav-link active text-white" aria-current="page" href="PAGES/Proyectos.html">Proyectos</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link active text-white" aria-current="page" href="PAGES/Mi Foda.html">Mi Foda</a>
+            </li>
           </ul>
         </div>
       </div>
