--- a/PAGES/Metas.html
+++ b/PAGES/Metas.html
@@ -7,7 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="icon" href="../Img/favicon-32x32.png" type="image/x-icon">
 </head>
-<body>
+<body data-barba="wrapper">
+    <div data-barba="container" data-barba-namespace="Metas">
     <header>
         <img src="../Img/Metasg.gif" alt="title" class="logo w-100">
         <nav class="navbar navbar-light 
@@ -150,18 +151,24 @@
                         <section style="margin-top: 50px;">
                             <div class="row">
                                 <div class="col-lg-4">
+                                    <div class="image1">
 <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="../Img/cientifico.gif" role="img" aria-label="Marcador de posición" preserveAspectRatio="xMidYMid slice" focusable="false">
+</div>
                                     <h2 class="fw-normal"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Meta General</font></font></h2>
                                   <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Graduarme de la carrera de ingenieria en sistemas lde la universidad Mariano Gálvez y abrir mi propio negocio.</font></font></p>
                                   
                                 </div><!-- /.col-lg-4 -->
                                 <div class="col-lg-4">
+                                    <div class="image1">
                                     <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="../Img/luciernagas.gif" role="img" aria-label="Marcador de posición" preserveAspectRatio="xMidYMid slice" focusable="false">
+                                </div>
                                     <h2 class="fw-normal"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Meta Espiritual</font></font></h2>
                                   <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Practicas mas la gratitud hacia Dios dedicarle unos minutos al día para agradecer por todo lo que tengo.</font></font></p>
                                 </div><!-- /.col-lg-4 -->
                                 <div class="col-lg-4">
+                                    <div class="image1">
                                     <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="../Img/campada.gif" role="img" aria-label="Marcador de posición" preserveAspectRatio="xMidYMid slice" focusable="false">
+                                </div>
                                     <h2 class="fw-normal"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Meta Familiar</font></font></h2>
                                   <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Pasar mas tiempo con mi familia y disfrutar todos los momentos que tenga con ellos, al igual que ser mas agradecido por mis padres.</font></font></p>
                                 </div><!-- /.col-lg-4 -->
@@ -175,7 +182,7 @@
         </div>
     </div>
 </header>
-
+</div>
 </body>
 <footer class=" text-center text-lg-start aliign-items-center  py-2 my-1 border-top text-white" style="background-color: #19274e;">
     <!-- Copyright -->
@@ -185,5 +192,8 @@
     </div>
     <!-- Copyright -->
   </footer>
+  <script src="https://unpkg.com/@barba/core"></script>
+  <script src  = " https://cdn.jsdelivr.net/npm/@barba/core " > </script>
+<script src="../js/custom.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </html>
