--- a/PAGES/Mi Foda.html
+++ b/PAGES/Mi Foda.html
@@ -2,13 +2,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galeria</title>
+    <title>Mi_Foda</title>
     <link rel="stylesheet" type="text/css" href="../CSS/estilo.css">  <!--Enlazamos el archivo CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="icon" href="../Img/favicon-32x32.png" type="image/x-icon">
 </head>
-<body>
+<body data-barba="wrapper">
+    <div data-barba="container" data-barba-namespace="Mi_Foda">
     <header>
         <img src="../Img/MiFodaNab.gif" alt="title" class="logo w-100">
         <nav class="navbar navbar-light 
@@ -226,7 +227,7 @@
         </div>
     </div>
 </header>
-
+</div>
 </body>
 <footer class=" text-center text-lg-start aliign-items-center  py-2 my-1 border-top text-white" style="background-color: #19274e;">
     <!-- Copyright -->
@@ -236,5 +237,8 @@
     </div>
     <!-- Copyright -->
   </footer>
+  <script src="https://unpkg.com/@barba/core"></script>
+  <script src  = " https://cdn.jsdelivr.net/npm/@barba/core " > </script>
+<script src="../js/custom.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </html>
