--- a/PAGES/SobreMi.html
+++ b/PAGES/SobreMi.html
@@ -7,7 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="icon" href="../Img/favicon-32x32.png" type="image/x-icon">
 </head>
-<body>
+<body data-barba="wrapper">
+    <div data-barba="container" data-barba-namespace="Sobre_Mi">
     <header>
         <img src="../Img/SobreMi.gif" alt="title" class="logo w-100">
         <nav class="navbar navbar-light 
@@ -139,7 +140,7 @@
                     </div>
                 </div>
             </nav>
-
+        
             <main class="col-md-9 ms-sm-auto
                         col-lg-10 px-md-4 ">
                 <div class="pt-3">
@@ -180,6 +181,8 @@
             </main>
         </div>
     </div>
+
+</div>
 </header>
 </body>
 <footer class=" text-center text-lg-start aliign-items-center  py-2 my-1 border-top text-white" style="background-color: #19274e;">
@@ -190,5 +193,8 @@
     </div>
     <!-- Copyright -->
   </footer>
+  <script src="https://unpkg.com/@barba/core"></script>
+  <script src  = " https://cdn.jsdelivr.net/npm/@barba/core " > </script>
+  <script src="../js/custom.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </html>
