--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="icon" href="Img/favicon-32x32.png" type="image/x-icon">
 </head>
-<body class="background"> <!--Delimitamos el cuerpo del documento-->
+<body class="background" data-barba="wrapper"> <!--Delimitamos el cuerpo del documento-->
+  <div data-barba="container" data-barba-namespace="Home">
     <header>
      <img src="Img/Folder.png" alt="title" class="logo w-100 width me-auto">
      <nav class="navbar navbar-expand-lg navbar-light justify-content-center" style="background-color: #19274e;">
@@ -97,16 +98,26 @@
   </section>
 
 
-      <section class="introduccion">
+      <section class="introduccion" style="animation-direction: reverse;">
         <span class="border border-0">
           <div id="introduccion" class="container">
             <div class="row d-flex justify-content-center aliign-items-center text-center">
-            <div class="col">
-        <img src="Img/IMG_20241229_193652.jpg" class="rounded-start-2"style="width: 400px; height: 500px;" alt="...">
+            <div class="col ">
+              <div class="fade-in-image">
+        <img src="Img/IMG_20241229_193652.jpg" class="rounded-start-2 "style="width: 400px; height: 500px;" alt="...">
+      </div>
       </div>
       <div class="col-md-8"> 
-        <h1 >Introducción</h1>
-        <p>En este sitio web encontraras mi portafolio personal, con todas mis aspiraciones, metas. Conoceras mas de mi y de mis proyectos asi que te invito a que veas todas las seccion que ofrece esta pagina.</p>
+        <div class="wave-container">
+          <h1 class="wave-text">
+              <span>I</span><span>N</span><span>T</span><span>R</span><span>O</span><span>D</span><span>U</span><span>C</span><span>C</span><span>I</span><span>Ó</span><span>N</span>
+          </h1>
+      </div>
+      <div class="split-text-container">
+        <span class="text-part left">En este sitio web encontraras mi portafolio personal, con todas mis aspiraciones, metas y sueños</span>
+        <span class="text-part right">Conoceras mas de mi y de mis proyectos asi que te invito a que veas todas las seccion que ofrece esta pagina.</span>
+    </div>    
+    <p class="maquina-escribir"> <span class="cursor">|</span></p>
       </div>
       </div>
       </div>
@@ -114,10 +125,10 @@
       </section>
 
       <section class="sobremi">
-        <div class="row row-cols-1 row-cols-md-5 g-4 justify-content-center aliign-items-center" style=" padding: 30px;">
+        <div class="row row-cols-1 row-cols-md-6 g-3 justify-content-center aliign-items-center" style=" padding: 30px;">
           <div class="col">
-            <div class="card h-100">
-              <a href="#">
+            <div class="card h-100 fadein-up">
+              <a href="PAGES/SobreMi.html">
               <img src="Img/pagina-sobre-mi.webp" class="card-img-top" alt="Sobre mi">
             </a>
               <div class="card-body">
@@ -126,40 +137,60 @@
             </div>
           </div>
           <div class="col">
-            <div class="card h-100">
+            <div class="card h-100 fadein-up">
+              <a href="PAGES/Galerias.html">
               <img src="Img/GALERIA.jpg" class="card-img-top" alt="Galeria">
+            </a>
               <div class="card-body">
                 <h5 class="card-title">Galeria</h5>
               </div>
             </div>
           </div>
           <div class="col">
-            <div class="card h-100">
+            <div class="card h-100 fadein-up">
+              <a href="PAGES/Mision_Vision_Valores.html">
               <img src="Img/mision.jpg" class="card-img-top" alt="Mis valores">
+            </a>
               <div class="card-body">
                 <h5 class="card-title">Mision, vision y mis valores</h5>
               </div>
             </div>
           </div>
           <div class="col">
-            <div class="card h-100">
+            <div class="card h-100 fadein-up">
+              <a href="PAGES/Metas.html">
               <img src="Img/metas-y-objetivos.webp" class="card-img-top" alt="Metas">
+            </a>
               <div class="card-body">
                 <h5 class="card-title">Metas</h5>
               </div>
             </div>
           </div>
           <div class="col">
-            <div class="card h-100">
+            <div class="card h-100 fadein-up">
+              <a href="PAGES/Proyectos.html">
               <img src="Img/proyectos.jpg" class="card-img-top" alt="proyectos">
+            </a>
               <div class="card-body">
                 <h5 class="card-title">Proyectos</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 fadein-up">
+              <a href="PAGES/Mi Foda.html">
+              <img src="Img/foda_marketing_educativo.png" class="card-img-top" alt="proyectos">
+            </a>
+              <div class="card-body">
+                <h5 class="card-title">FODA</h5>
               </div>
             </div>
           </div>
         </div>
       </section>
 </article>
+
+</div>
 </body>
 
 <footer class=" text-center text-lg-start aliign-items-center  py-2 my-1 border-top text-white" style="background-color: #19274e;">
@@ -170,6 +201,8 @@
   </div>
   <!-- Copyright -->
 </footer>
-
+<script src="https://unpkg.com/@barba/core"></script>
+<script src  = " https://cdn.jsdelivr.net/npm/@barba/core " > </script>
+<script src="js/custom.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
