--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-xxl-0">
             <li class="nav-item">
-              <a class="nav-link active text-white" aria-current="page" href="PAGES/SobreMi.html">Sobre mí</a>
+              <a class="nav-link active text-white" aria-current="page" href="PAGES/SobreMi.html">Sobre </a>
             </li>
             <li class="nav-item">
               <a class="nav-link active text-white" href="PAGES/Galerias.html">Mi galeria</a>
