--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="background" data-barba="wrapper"> <!--Delimitamos el cuerpo del documento-->
   <div data-barba="container" data-barba-namespace="Home">
     <header>
-     <img src="Img/Folder.png" alt="title" class="logo w-100 width me-auto">
+     <img src="Img/Portafolio.gif" alt="title" class="logo w-100 width me-auto">
      <nav class="navbar navbar-expand-lg navbar-light justify-content-center" style="background-color: #19274e;">
       <div class="text-center d-flex">
         <a class="navbar-brand" href="#">
@@ -24,7 +24,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-xxl-0">
             <li class="nav-item">
-              <a class="nav-link active text-white" aria-current="page" href="PAGES/SobreMi.html">Sobre </a>
+              <a class="nav-link active text-white" aria-current="page" href="PAGES/SobreMi.html">Sobre mí</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active text-white" href="PAGES/Galerias.html">Mi galeria</a>
